--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -46,6 +46,9 @@
       @include respond(phone) {
         align-items: center;
       }
+      &-span {
+        font-weight: bold;
+      }
 
       &-text {
         text-align: left;
